vertical-alignment fixed

--- a/html/regestration form/styles.css
+++ b/html/regestration form/styles.css
@@ -45,4 +45,5 @@ body {
   margin-top: 0;
   margin-left: 0;
   margin-bottom: 0;
+  vertical-align: middle;
   }
